# vscope

./: .gitignore  .gitmodules  .swp  Cargo.toml  README.md  flake.nix
crates/cli/: Cargo.toml
crates/cli/src/: app_cli.rs  app_interactive.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: main.rs
