[workspace.package]
name = "hackathon"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/ui",
  "crates/service"
]

[workspace.dependencies]
axum = "0.7.5"
daemonize = "0.5.0"
rayon = "1.10.0"
tokio = { version="1.39.2", features=["full"] }
clap = "4.5.16"
serde = { version="1.0.208", features=["derive"] }
iced = "0.12.1"
