[workspace.package]
name = "hackathon"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/service", 
  "crates/core"
]

[workspace.dependencies]
axum = "0.7.5"
daemonize = "0.5.0"
rayon = "1.10.0"
tokio = { version="1.39.2", features=["full"] }
clap = { version="4.5.16", features=["derive"] }
serde = { version="1.0.208", features=["derive"] }
serde_json = "1.0.125"
hyperlocal = "0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3"
vs-core = { path = "crates/core" }
lancedb = "0.9.0"
arrow = "52.2.0"
futures-util = "0.3.30"
fastembed = "3.14.1"
inotify = "0.10.2"
anyhow = "1.0.86"
tokio-rayon = "2.1.0"
ratatui = "0.28.0"

[patch.crates-io]
zstd = { git = "https://github.com/harana-oss/zstd-rs.git" }
